--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>phaser - hello world</title>
-	<script src="node_modules/Phaser/build/phaser.js"></script>
+	<script src="node_modules/Phaser/build/phaser.min.js"></script>
 	<script src="build/Main.js"></script>
 </head>
 <body>
@@ -13,27 +13,6 @@
 	m = new Main()
 
 	var game = new Phaser.Game(800,600, Phaser.AUTO,'',m)
-	/*
-	var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
-
-	function preload() {
-
-		game.load.image('logo', 'logo.png');
-
-	}
-
-	var logo;
-
-	function create() {
-
-		logo = game.add.sprite(0, 0, 'logo');
-
-	}
-
-	function update() {
-	}
-	*/
-
 })();
 
 </script>
